--- a/templates/board/index.html
+++ b/templates/board/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        <h1>掲示板アプリ</h1>
-    </body>
-</html>
+{% extends 'board/base.html' %}
+{% block content %}
+<body>
+    <h1>掲示板アプリ</h1>
+</body>
+{% endblock %}
