--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'board:index' %}">Home</a>
+                        <a class="nav-link" href="{% url 'board:board' %}">Home</a>
                     </li>
                 </ul>
             </div>
