--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,11 @@
                 {% if user.is_authenticated %}
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
+                        <a class="nav-link" href="">ログイン中：{{ user.username }}</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
                         <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                     </li>
                 </ul>
