--- a/templates/board/post.html
+++ b/templates/board/post.html
@@ -21,6 +21,7 @@
         </tbody>
     </table>
     <a href="{% url 'board:board' %}">掲示板へ</a>
+    <a href="{% url 'board:post_update' post_detail.pk %}">編集</a>
     <a href="{% url 'board:post_delete' post_detail.pk %}">削除</a>
 </div>
 {% endblock %}
