投稿一覧画面関連の名前をboardからpost_listに変更 アプリ名はboardのまま

--- a/templates/board/post.html
+++ b/templates/board/post.html
@@ -20,7 +20,7 @@
             </tr>
         </tbody>
     </table>
-    <a href="{% url 'board:board' %}">掲示板へ</a>
+    <a href="{% url 'board:post_list' %}">掲示板へ</a>
     <a href="{% url 'board:post_update' post_detail.pk %}">編集</a>
     <a href="{% url 'board:post_delete' post_detail.pk %}">削除</a>
 </div>
