--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'board:board' %}">Home</a>
+                        <a class="nav-link" href="{% url 'board:post_list' %}">Home</a>
                     </li>
                 </ul>
                 {% if user.is_authenticated %}
