--- a/templates/board/list.html
+++ b/templates/board/list.html
@@ -18,5 +18,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <button onclick='location.href="{% url 'board:post_create' %}"'>新規投稿</button>
 </div>
 {% endblock %}
