--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>Board</title>
-        <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+        <link rel="stylesheet" href="{% static 'base.css' %}">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -31,6 +31,17 @@
             </div>
         </nav>
         <main>
+            {% if user.is_authenticated %}
+            <div class="side-menu">
+                <ul>
+                {% for func in functionlist %}
+                <li>
+                    <a href="{{ func.path }}">{{ func.title }}</a>
+                </li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
             <div class="container">
             {% block content %}
             {% endblock %}
