ログアウト処理をPOSTに変更

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,10 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                        <form method="post" name="logout_form" action="{% url 'accounts:logout' %}">
+                            {% csrf_token %}
+                            <a class="nav-link" href="javascript:logout_form.submit()">Logout</a>
+                        </form>
                     </li>
                 </ul>
                 {% endif %}
